--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test
-*.test
-
 # Output
-*.out
+build/
 
 # Go workspace file
 go.work
